--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,10 @@
 [submodule "content/themes/casper"]
 	path = content/themes/casper
 	url = ../../TryGhost/Casper.git
+	branch = main
 [submodule "core/client"]
 	path = core/client
 	url = ../../TryGhost/Admin.git
+	branch = main
+[submodule "bar1"]
+	branch = branch1
