--- a/config.production.json
+++ b/config.production.json
@@ -1,4 +1,5 @@
 {
+    "url": "japaneseartswords.nlaha.com",
     "enableDeveloperExperiments": true,
     "database": {
         "client": "sqlite3",
