--- a/config.production.json
+++ b/config.production.json
@@ -8,5 +8,9 @@
         },
         "useNullAsDefault": true,
         "debug": false
+    },
+    "server": {
+        "host": "127.0.0.1",
+        "port": 2368
     }
 }
